--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.6",
+        "@tomtom-international/web-sdk-plugin-searchbox": "^3.2.0",
         "alpinejs": "^3.13.8",
         "bootstrap": "^5.2.2"
     }
