--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "sass": "^1.55.0",
-        "vite": "^3.0.0"
+        "vite": "^3.0.0",
+        "parcel": "^2.6.2"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.6",
         "@tomtom-international/web-sdk-plugin-searchbox": "^3.2.0",
         "alpinejs": "^3.13.8",
-        "bootstrap": "^5.2.2"
+        "bootstrap": "^5.2.2",
+        "chart.js": "^4.4.2",
+        "@cubejs-client/core": "^0.31.0"
     }
 }
